--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "@tanstack/react-table": "^8.21.3",
     "json2csv": "^6.0.0-alpha.2",
+    "lucide-react": "^0.526.0",
     "next": "15.4.4",
     "papaparse": "^5.5.3",
     "react": "19.1.0",
